--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         android:theme="@style/Theme.CRUD_kotlin"
         tools:targetApi="31">
         <activity
-            android:name=".AutActivity"
-            android:exported="false" />
+            android:name=".MainActivity"
+            android:exported="false"
+            android:noHistory="true"/>
         <activity
             android:name=".RegActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:noHistory="true"/>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".AutActivity"
+            android:exported="true"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
