--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,21 @@
         android:theme="@style/Theme.CRUD_kotlin"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LentaActivity"
             android:exported="false"
             android:noHistory="true"/>
         <activity
-            android:name=".RegActivity"
+            android:name=".FavActivity"
             android:exported="false"
             android:noHistory="true"/>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:noHistory="true" />
+        <activity
+            android:name=".RegActivity"
+            android:exported="false"
+            android:noHistory="true" />
         <activity
             android:name=".AutActivity"
             android:exported="true"
